# Distributed-KV-Cache-for-LLM-Inference

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  go.mod  go.sum
.claude/rules/: go-testing.md  proto-grpc.md  terraform.md  vllm-python.md
.githooks/: pre-commit
.github/workflows/: ci.yml
cmd/cache-server/: main.go
cmd/chaos/: main.go
cmd/loadgen/: main.go  main_test.go  trace.go
connector/: README.md  pyproject.toml
connector/scripts/: demo_serve_client.py  run_distributed_benchmark.py  run_phase1_benchmark.py
connector/src/kvcache_connector/: __init__.py  blockio.py  client.py  codec.py  connector.py  hashing.py  metadata.py
connector/src/kvcache_proto/kvcache/v1/: __init__.py  kvcache_pb2.py  kvcache_pb2_grpc.py
connector/tests/: test_blockio.py  test_codec.py  test_hashing.py
connector/tools/: diag_shard_presence.py  probe_kv_layout.py
demo/chat-ui/: README.md  index.html  serve.py
deploy/observability/: README.md  docker-compose.yml
docs/: 00-initial-prompt.md  00-project-plan.md  01-architecture-overview.md  01-architecture.md  02-roadmap-and-workflow.md  03-distributed-systems-in-go.md  04-kv-cache-and-vllm.md  05-cloud-deployment-aws.md  06-resume-and-interview.md  learning-log.md
docs/adr/: 0000-template.md  0001-go-for-cache-server.md  0002-etcd-for-metadata.md  0003-vllm-as-external-service.md  0004-aws-via-terraform.md  0005-ec2-not-eks-for-v1.md  0006-spot-for-cache-nodes.md  0007-multi-objective-eviction-policy.md  0008-vllm-kv-connector-no-fork.md  0027-s3-cold-tier.md  (+26 more)
scripts/: aws-chaos.sh  demo-chaos.sh  phase5b-sweep.ps1  prep_sharegpt.py  push-image.sh
terraform/: README.md
(+87 files in other folders)
