[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-kv-cache-connector"
version = "0.1.0"
description = "vLLM KVConnectorBase_V1 adapter for the distributed KV cache project"
requires-python = ">=3.10"
dependencies = [
  "grpcio>=1.80",
  "protobuf>=6.31.1",
]

[project.optional-dependencies]
dev = [
  "grpcio-tools>=1.80",
  "pytest>=8",
]
vllm = [
  "torch",
  "vllm",
]

[tool.setuptools.packages.find]
# Two source roots: the connector package lives under src/, and the proto-generated
# stubs expose `kvcache` as a TOP-LEVEL package from src/kvcache_proto (the generated
# grpc code does `from kvcache.v1 import ...`). Both must be importable at runtime, not
# just under pytest's `pythonpath` below — otherwise vLLM's process can't import the client.
where = ["src", "src/kvcache_proto"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "src/kvcache_proto"]
